force-app/main/default/objects/Club_MemberShip__c/Club_MemberShip__c.object-meta.xml
<CustomObject>
    <label>Club Membership</label>
    <nameField>
        <label>Club MemberShip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>