force-app/main/default/objects/Club_MemberShip__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <formula>IF( memberDate__c != null , memberDate__c ,lastStatusUpdated__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActivityDate</label>
    <type>DateTime</type>
</CustomField>