force-app/main/default/objects/Club_MemberShip__c/fields/attachedCA__c.field-meta.xml
<CustomField>
    <fullName>attachedCA__c</fullName>
    <formula>clientId__r.Owner.FirstName + &apos; &apos; + clientId__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attached CA</label>
    <type>Text</type>
</CustomField>