force-app/main/default/objects/Club_MemberShip__c/fields/AttachedCAID__c.field-meta.xml
<CustomField>
    <fullName>AttachedCAID__c</fullName>
    <description>This represent the OwnerId of the Account</description>
    <formula>clientId__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attached CA ID</label>
    <type>Text</type>
</CustomField>