force-app/main/default/objects/Club_MemberShip__c/fields/badgeCount__c.field-meta.xml
<CustomField>
    <fullName>badgeCount__c</fullName>
    <label>Badge Count</label>
    <summaryFilterItems>
        <field>Badge_Collection__c.badgeFlag__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Badge_Collection__c.member_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>