force-app/main/default/objects/Club_MemberShip__c/fields/Civility__c.field-meta.xml
<CustomField>
    <fullName>Civility__c</fullName>
    <formula>IF(ISPICKVAL( clientId__r.Salutation , &quot;02&quot;),&quot;Mr&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;03&quot;),&quot;Mrs&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;04&quot;),&quot;Ms&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;03 &amp; 04&quot;),&quot;Mr &amp; Mrs&quot; ,
IF(ISPICKVAL( clientId__r.Salutation , &quot;28M&quot;),&quot;Doctor&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;78&quot;),&quot;Company&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;SF&quot;),&quot;Sama&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;SM&quot;),&quot;sama&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;Mx&quot;),&quot;Mx&quot;,
IF(ISPICKVAL( clientId__r.Salutation , &quot;Prefer not to say&quot;),&quot;Prefer not to say&quot;,null))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Civility</label>
    <type>Text</type>
</CustomField>