force-app/main/default/objects/Club_MemberShip__c/fields/Client_App_Activated__c.field-meta.xml
<CustomField>
    <fullName>Client_App_Activated__c</fullName>
    <formula>IF( ISBLANK(clientId__r.MK_Installation_Date_LVApp__c),&apos;NO&apos;,&apos;YES&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client App Activated</label>
    <type>Text</type>
</CustomField>