force-app/main/default/objects/Club_MemberShip__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <formula>IF(isClubEligible__c=TRUE,IF(ISBLANK(memberDate__c),&apos;Eligible&apos;,&apos;Onboarded&apos;),&apos;Not Eligible&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Status</label>
    <type>Text</type>
</CustomField>