force-app/main/default/objects/Club_MemberShip__c/fields/clientId__c.field-meta.xml
<CustomField>
    <fullName>clientId__c</fullName>
    <description>Account Id</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Clubs_MemberShip</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>