force-app/main/default/objects/Club_MemberShip__c/fields/Club_and_Seasons__c.field-meta.xml
<CustomField>
    <fullName>Club_and_Seasons__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Club</label>
    <referenceTo>Club_and_Seasons__c</referenceTo>
    <relationshipName>Clubs_MemberShip</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>