force-app/main/default/objects/Club_MemberShip__c/fields/Club_status__c.field-meta.xml
<CustomField>
    <fullName>Club_status__c</fullName>
    <formula>CASE(
clubStatus__c, 
&apos;Bronze&apos;, &apos;Level B&apos;,
&apos;Pearl&apos;, &apos;Level C&apos;,
&apos;Ultra Rare&apos;,&apos;Level A&apos;,
&apos;Not Eligible&apos;,&apos;Not Eligible&apos;,
&apos;Client Advisor&apos;,&apos;Client Advisor&apos;,
&apos;Influencer&apos;,&apos;Influencer&apos;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Club Status</label>
    <type>Text</type>
</CustomField>