force-app/main/default/objects/Club_MemberShip__c/fields/clubName__c.field-meta.xml
<CustomField>
    <fullName>clubName__c</fullName>
    <formula>Club_and_Seasons__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Club Name</label>
    <type>Text</type>
</CustomField>