force-app/main/default/objects/Club_MemberShip__c/fields/clubNickName__c.field-meta.xml
<CustomField>
    <fullName>clubNickName__c</fullName>
    <description>Nickname (Public or Private) for a LV Club Member</description>
    <label>Nickname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>