force-app/main/default/objects/Club_MemberShip__c/fields/clubStatus__c.field-meta.xml
<CustomField>
    <fullName>clubStatus__c</fullName>
    <description>Membership levels from the LV Clubs</description>
    <label>Club Status TECH</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClubStatusList</valueSetName>
    </valueSet>
</CustomField>