force-app/main/default/objects/Club_MemberShip__c/fields/dreamId__c.field-meta.xml
<CustomField>
    <fullName>dreamId__c</fullName>
    <description>Client/Member DreamId</description>
    <label>Dream ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>