force-app/main/default/objects/Club_MemberShip__c/fields/eCommerceClientCountry__c.field-meta.xml
<CustomField>
    <fullName>eCommerceClientCountry__c</fullName>
    <formula>CONTAINS(
 &quot;BEL,DNK,FIN,LUX,MCO,NLD,AUT,SWE,IRL,GBR,ESP,ITA,DEU,FRA,SAU,ARE,JPN,USA,CAN,BRA,MEX,KOR,TWN,HKG,AUS,MYS,SGP,NZL,THA,CHN&quot;,
  TEXT(clientId__r.SPO_Country_code__pc)
) || (
 TEXT(clientId__r.SPO_Country_code__pc) = null &amp;&amp;
 CONTAINS(
 &quot;BEL,DNK,FIN,LUX,MCO,NLD,AUT,SWE,IRL,GBR,ESP,ITA,DEU,FRA,SAU,ARE,JPN,USA,CAN,BRA,MEX,KOR,TWN,HKG,AUS,MYS,SGP,NZL,THA,CHN&quot;,
  clientId__r.TECH_AttachedStoreCountry__c
 )
)</formula>
    <label>Client Residency Country is eCommerce</label>
    <type>Checkbox</type>
</CustomField>