force-app/main/default/objects/Club_MemberShip__c/fields/favoriteSku__c.field-meta.xml
<CustomField>
    <fullName>favoriteSku__c</fullName>
    <description>Favorite SKU from Client past transactions, used as an attribute to display the Member 3D Passport</description>
    <label>Favorite SKU</label>
    <length>12</length>
    <type>Text</type>
</CustomField>