force-app/main/default/objects/Club_MemberShip__c/fields/isClubEligible__c.field-meta.xml
<CustomField>
    <fullName>isClubEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Club Eligibility</label>
    <type>Checkbox</type>
</CustomField>