force-app/main/default/objects/Club_MemberShip__c/fields/isMember__c.field-meta.xml
<CustomField>
    <fullName>isMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status stating the Client passed the Club onboarding steps and accessed the LV Club</description>
    <label>is Member</label>
    <type>Checkbox</type>
</CustomField>