force-app/main/default/objects/Club_MemberShip__c/fields/isNotInterested__c.field-meta.xml
<CustomField>
    <fullName>isNotInterested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Interested</label>
    <type>Checkbox</type>
</CustomField>