force-app/main/default/objects/Club_MemberShip__c/fields/isPublicAccount__c.field-meta.xml
<CustomField>
    <fullName>isPublicAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client accepted to share some data to the Club community</description>
    <label>Public Member</label>
    <type>Checkbox</type>
</CustomField>