force-app/main/default/objects/Club_MemberShip__c/fields/lastLoginClub__c.field-meta.xml
<CustomField>
    <fullName>lastLoginClub__c</fullName>
    <description>Last Member interaction date with the Club</description>
    <label>Last Login Club</label>
    <type>DateTime</type>
</CustomField>