force-app/main/default/objects/Club_MemberShip__c/fields/lastStatusUpdated__c.field-meta.xml
<CustomField>
    <fullName>lastStatusUpdated__c</fullName>
    <description>Date &amp; Hour at which LV Club member status changed</description>
    <label>Club Status Update Date</label>
    <type>DateTime</type>
</CustomField>