force-app/main/default/objects/Club_MemberShip__c/fields/memberDate__c.field-meta.xml
<CustomField>
    <fullName>memberDate__c</fullName>
    <description>Date &amp; Hour the client passed the Club onboarding steps and accessed the LV CLub</description>
    <label>Membership Creation Date</label>
    <type>DateTime</type>
</CustomField>