force-app/main/default/objects/Club_MemberShip__c/fields/membershipDeletionDateTime__c.field-meta.xml
<CustomField>
    <fullName>membershipDeletionDateTime__c</fullName>
    <description>Date at which Club member deleted his membership</description>
    <label>Membership Deletion Date Time</label>
    <type>DateTime</type>
</CustomField>