force-app/main/default/objects/Club_MemberShip__c/fields/passportSkin__c.field-meta.xml
<CustomField>
    <fullName>passportSkin__c</fullName>
    <description>3D Passport Skin, used as an attribute to display the Member 3D Passport</description>
    <label>3D ID Skin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>