force-app/main/default/objects/Club_MemberShip__c/fields/productCategoryCount__c.field-meta.xml
<CustomField>
    <fullName>productCategoryCount__c</fullName>
    <label>Product Count</label>
    <summaryForeignKey>Club_Collection_Wall__c.clubMemberId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>