force-app/main/default/objects/Club_MemberShip__c/fields/productCategorySize__c.field-meta.xml
<CustomField>
    <fullName>productCategorySize__c</fullName>
    <label>Product Category Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>