force-app/main/default/objects/Club_MemberShip__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <formula>IF(ISBLANK(memberDate__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration</label>
    <type>Checkbox</type>
</CustomField>