force-app/main/default/objects/Club_MemberShip__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <formula>clientId__r.Segmentation_To_Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmentation</label>
    <type>Text</type>
</CustomField>