force-app/main/default/objects/Club_MemberShip__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <formula>clientId__r.Store__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store</label>
    <type>Text</type>
</CustomField>