force-app/main/default/objects/Club_MemberShip__c/fields/Tech_isCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>Tech_isCurrentUser__c</fullName>
    <description>check if the current user is the CA</description>
    <formula>IF($User.Id = AttachedCAID__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_isCurrentUser</label>
    <type>Checkbox</type>
</CustomField>