force-app/main/default/objects/Club_MemberShip__c/fields/viewedFirstClubCommunication__c.field-meta.xml
<CustomField>
    <fullName>viewedFirstClubCommunication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viewed First Club Communication</label>
    <type>Checkbox</type>
</CustomField>