force-app/main/default/objects/Club_MemberShip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dreamId__c</columns>
    <columns>clientId__c</columns>
    <columns>clubName__c</columns>
    <columns>clubStatus__c</columns>
    <columns>isClubEligible__c</columns>
    <columns>isMember__c</columns>
    <columns>isPublicAccount__c</columns>
    <columns>clubNickName__c</columns>
    <columns>productCategoryCount__c</columns>
    <columns>badgeCount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>