force-app/main/default/objects/Club_MemberShip__c/listViews/LV_54.listView-meta.xml
<ListView>
    <fullName>LV_54</fullName>
    <columns>NAME</columns>
    <columns>attachedCA__c</columns>
    <columns>lastLoginClub__c</columns>
    <columns>memberDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>clubName__c</field>
        <operation>equals</operation>
        <value>Sneakers</value>
    </filters>
    <filters>
        <field>isClubEligible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Tech_isCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>LV #54</label>
</ListView>